--- a/basehr/templates/basehr/employee_edit.html
+++ b/basehr/templates/basehr/employee_edit.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-    <h1>New Post</h1>
-    <form method='POST' class="post-form">
+    <h1>New Employee</h1>
+    <form method='POST' class="employee-form">
         {% csrf_token %}
-        {{ form.as_table }}
+        {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
 {% endblock %}
